[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/DummyEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/PlagueDoctor/States/idle_state.gd" type="Script" id=2]
[ext_resource path="res://Enemies/PlagueDoctor/States/attack.gd" type="Script" id=3]
[ext_resource path="res://Enemies/PlagueDoctor/States/move_closer.gd" type="Script" id=4]
[ext_resource path="res://Enemies/PlagueDoctor/PlagueDoctor.gd" type="Script" id=5]
[ext_resource path="res://Assets/PlagueDoctorRun/frame0003.png" type="Texture" id=6]
[ext_resource path="res://Assets/PlagueDoctorRun/frame0002.png" type="Texture" id=7]
[ext_resource path="res://Assets/PlagueDoctorRun/frame0004.png" type="Texture" id=8]
[ext_resource path="res://Assets/PlagueDoctorRun/frame0005.png" type="Texture" id=9]
[ext_resource path="res://Assets/PlagueDoctorRun/frame0001.png" type="Texture" id=10]
[ext_resource path="res://Assets/PlagueDoctorRun/frame0000.png" type="Texture" id=11]
[ext_resource path="res://Toes/Toes.tscn" type="PackedScene" id=12]
[ext_resource path="res://Head/Head.tscn" type="PackedScene" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "moving",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.9219, 26.2581 )

[node name="PlagueDoctor" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="PlagueDoctorAttackState" type="Node" parent="States" index="3"]
script = ExtResource( 3 )

[node name="PlagueDoctorIdleState" type="Node" parent="States" index="4"]
script = ExtResource( 2 )

[node name="PlagueDoctorMoveCloserState" type="Node" parent="States" index="5"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "moving"
frame = 5
playing = true
offset = Vector2( 170, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]
position = Vector2( -0.926575, -0.926582 )
shape = SubResource( 2 )

[node name="Head" parent="." index="4" instance=ExtResource( 13 )]
position = Vector2( -1, -30 )
scale = Vector2( 0.3, 1 )

[node name="Toes" parent="." index="5" instance=ExtResource( 12 )]
position = Vector2( -1, 28.25 )
scale = Vector2( 0.3, 1 )
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="body_entered" from="Toes" to="." method="_on_Toes_body_entered"]
[connection signal="body_exited" from="Toes" to="." method="_on_Toes_body_exited"]
